--- a/name-that-pokemon-frontend/src/styles.scss
+++ b/name-that-pokemon-frontend/src/styles.scss
@@ -1,4 +1,14 @@
 body {
     overflow: hidden;
-    background-color: rgb(197, 70, 64);
+    background-image: url("../assets/pokemon-background-desktop.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media(max-width: 1100px) {
+        background-image: url("../assets/pokemon-background-tablet.png");
+    }
+
+    @media(max-width: 950px) {
+        background-image: url("../assets/pokemon-background-phone.png");
+    }
 }
