--- a/name-that-pokemon-frontend/src/app/app.component.html
+++ b/name-that-pokemon-frontend/src/app/app.component.html
@@ -1,8 +1,9 @@
+<h3>Total Score {{totalScore}}</h3>
 <div class="imageContainer">
     <img src={{pokemonImage}} [ngClass]="revealPokemon ? 'revealPokemon' : 'hidePokemon'" alt="" aria-label="Pokemon">
 </div>
 <div class="answerContainer">
-    <button *ngFor="let answer of shuffledAnswers" [ngClass]="checkAnswerCorrect(answer)" (click)="selectAnswer()">{{answer}}</button>
+    <button *ngFor="let answer of shuffledAnswers" [ngClass]="checkAnswerCorrect(answer)" (click)="selectAnswer(answer)">{{answer}}</button>
 </div>
 <div class="nextContainer">
     <button *ngIf="revealPokemon" (click)="getNextPokemon()">NEXT</button>
