Added css margin to image

--- a/name-that-pokemon-frontend/src/app/app.component.scss
+++ b/name-that-pokemon-frontend/src/app/app.component.scss
@@ -10,6 +10,7 @@ h3 {
     width: 100%;
     display: flex;
     justify-content: center;
+    margin: 1rem;
 
     img {
         margin-top: 1rem;
