--- a/name-that-pokemon-frontend/src/app/app.component.html
+++ b/name-that-pokemon-frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
     <img src={{pokemonImage}} [ngClass]="revealPokemon ? 'revealPokemon' : 'hidePokemon'" alt="" aria-label="Pokemon">
 </div>
 <div class="answerContainer">
-    <button *ngFor="let answer of shuffledAnswers" [ngClass]="checkAnswerCorrect(answer)" (click)="selectAnswer(answer)">{{answer}}</button>
+    <button *ngFor="let answer of shuffleAnswers(pokemonNames)" (click)="selectAnswer(answer)">{{answer}}</button>
 </div>
 <div class="nextContainer">
     <button *ngIf="revealPokemon" (click)="getNextPokemon()">&#187;</button>
