--- a/name-that-pokemon-frontend/src/app/app.component.scss
+++ b/name-that-pokemon-frontend/src/app/app.component.scss
@@ -10,7 +10,7 @@ h3 {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 1rem;
+    margin-top: 10%;
 
     img {
         margin-top: 1rem;
@@ -60,7 +60,7 @@ button {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin: 0;
+    margin-top: 6%;
     padding: 0;
 
     button {
