Refactored frontend and added more exception handling around api responses

--- a/name-that-pokemon-frontend/src/app/app.component.html
+++ b/name-that-pokemon-frontend/src/app/app.component.html
@@ -1,9 +1,7 @@
 <app-pokemon-quiz
     *ngIf="!showFinalScore"
     [totalScore]="totalScore"
-    [pokemonId]="pokemonId"
-    [pokemonImage]="pokemonImage"
-    [pokemonNames]="pokemonNames"
+    [currentPokemon]="currentPokemon"
     (gameComplete)="onGameComplete()"
     (incrementScore)="onIncrementScore()">
 </app-pokemon-quiz>
